# ripgrep

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: decompress.rs  pattern.rs  process.rs
crates/globset/: Cargo.toml
crates/globset/src/: fnv.rs  glob.rs  lib.rs  pathutil.rs  serde_impl.rs
crates/grep/: Cargo.toml
crates/ignore/: Cargo.toml
crates/ignore/src/: dir.rs  gitignore.rs  overrides.rs  pathutil.rs  types.rs  walk.rs
crates/ignore/tests/: gitignore_matched_path_or_any_parents_tests.rs  gitignore_skip_bom.rs
crates/matcher/: Cargo.toml
crates/matcher/src/: interpolate.rs  lib.rs
crates/pcre2/: Cargo.toml
crates/printer/: Cargo.toml
crates/printer/src/: color.rs  json.rs  jsont.rs  path.rs  standard.rs  summary.rs  util.rs
crates/printer/src/hyperlink/: mod.rs
crates/regex/: Cargo.toml
crates/searcher/: Cargo.toml
crates/searcher/examples/: search-stdin.rs
crates/searcher/src/: line_buffer.rs  lines.rs  sink.rs  testutil.rs
crates/searcher/src/searcher/: core.rs  glue.rs  mod.rs
fuzz/: Cargo.toml
