[package]
name = "grep-cli"
version = "0.1.12"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Utilities for search oriented command line applications.
"""
documentation = "https://docs.rs/grep-cli"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/cli"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/cli"
readme = "README.md"
keywords = ["regex", "grep", "cli", "utility", "util"]
license = "Unlicense OR MIT"
edition = "2024"
rust-version = "1.93"

[dependencies]
bstr = { version = "1.12.1", features = ["std"] }
globset = { version = "0.4.18", path = "../globset" }
log = "0.4.29"
termcolor = "1.4.1"

[target.'cfg(windows)'.dependencies.winapi-util]
version = "0.1.11"

[target.'cfg(unix)'.dependencies.libc]
version = "0.2.180"
