[package]
name = "globset"
version = "0.4.18"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Cross platform single glob and glob set matching. Glob set matching is the
process of matching one or more glob patterns against a single candidate path
simultaneously, and returning all of the globs that matched.
"""
documentation = "https://docs.rs/globset"
homepage = "https://github.com/BurntSushi/ripgrep/tree/master/crates/globset"
repository = "https://github.com/BurntSushi/ripgrep/tree/master/crates/globset"
readme = "README.md"
keywords = ["regex", "glob", "multiple", "set", "pattern"]
license = "Unlicense OR MIT"
edition = "2024"
rust-version = "1.93"

[lib]
name = "globset"
bench = false

[dependencies]
aho-corasick = "1.1.4"
arbitrary = { version = "1.4.2", optional = true, features = ["derive"] }
bstr = { version = "1.12.1", default-features = false, features = ["std"] }
log = { version = "0.4.29", optional = true }
serde = { version = "1.0.228", optional = true }

[dependencies.regex-syntax]
version = "0.8.8"
default-features = false
features = ["std"]

[dependencies.regex-automata]
version = "0.4.13"
default-features = false
features = ["std", "perf", "syntax", "meta", "nfa", "hybrid"]

[dev-dependencies]
glob = "0.3.3"
serde_json = "1.0.149"

[features]
default = ["log"]
arbitrary = ["dep:arbitrary"]
# DEPRECATED. It is a no-op. SIMD is done automatically through runtime
# dispatch.
simd-accel = []
serde1 = ["serde"]
